variable naming convention, fixed about, & spacing

--- a/Style/style.css
+++ b/Style/style.css
@@ -28,8 +28,8 @@ body {
   background-color: var(--nwhite);
 }
 
-.body_header {
-  padding: 4% 0% 2% 0%;
+.body-sect-header {
+  padding: 3% 0% 2rem 0%;
   text-transform: uppercase;
   font-size: 1.78rem;
   text-align: center;
@@ -91,7 +91,7 @@ header {
   width: 100%;
   display: flex;
   justify-content: space-between;
-  padding: 5px 5%;
+  padding: 5px 4%;
   transition: .75s cubic-bezier(0.445, 0.05, 0.55, 0.95)
 }
 
@@ -481,11 +481,12 @@ section#hero {
 
 /* BODY */
 .body {
-  padding: 2.5% 5%;
+  padding: 2% 5%;
+  margin-bottom: 1rem;
 }
 
 /* ABOUT */
-.about_container {
+.about-dcontainer {
   width: 100%;
 }
 
@@ -495,10 +496,10 @@ section#hero {
 
 .infoSection {
   grid-area: infoSect;
-  padding: 10%;
+  padding: 5%;
 }
 
-.about_container .about-content-boxes {
+.about-dcontainer .about-content-boxes {
   display: grid;
   grid-template-columns: 2fr 3fr;
   grid-gap: 5%;
@@ -507,7 +508,7 @@ section#hero {
 
 .about-content-boxes .imageSection {
   position: relative;
-  max-width: 512px;
+  max-width: 526px;
   height: auto;
 }
 
@@ -516,7 +517,6 @@ section#hero {
   height: 100%;
   object-fit: cover;
   position: relative;
-  z-index: -1000;
 }
 
 .about-content-boxes .imageSection::after {
@@ -719,17 +719,19 @@ section#hero {
 }
 
 /* TESTIMONIALS */
+/*
 .testimonial_bubble {
   background-color: var(--nwhiteaccent);
   border-radius: 20px;
-  box-shadow: 2px 2px 20px rgba(0, 0, 0, 0.2);
+  box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.1);
 }
+*/
 
 .slideshow-container {
   position: relative;
 }
 
-.mySlides {
+.testmnl-slide {
   display: none;
   padding: 5% 10% 2% 10%;
   text-align: center;
@@ -758,8 +760,9 @@ section#hero {
 
 .prev:hover,
 .next:hover {
-  background-color: rgba(0, 0, 0, 0.8);
+  background-color: rgba(0, 0, 0, 0.09);
   color: white;
+  transition: .35s;
 }
 
 .dot-container {
@@ -775,7 +778,7 @@ section#hero {
   background-color: lightgray;
   border-radius: 50%;
   display: inline-block;
-  transition: background-color 0.6s ease;
+  transition: background-color 0.25s ease;
 }
 
 .active,
@@ -808,10 +811,10 @@ q {
   text-align: center;
 }
 
-.see_more {
+.see-more-button {
   border: 20px;
   border-radius: 20px;
-  margin: 2.5% 0 5% 0;
+  margin: 2.5% 0 1rem 0;
   width: 15rem;
   min-height: 5rem;
   font-weight: 600;
@@ -819,12 +822,12 @@ q {
   box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.1);
 }
 
-.see_more:hover {
+.see-more-button:hover {
   box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.2);
   transition: .25s;
 }
 
-.see_more a button {
+.see-more-button a button {
   color: var(--nblack);
 }
 
@@ -849,7 +852,7 @@ q {
 }
 
 /* Container around content */
-.timeline_container {
+.timeline-dcontainer {
   padding: 10px 40px;
   position: relative;
   background-color: inherit;
@@ -857,7 +860,7 @@ q {
 }
 
 /* The circles on the timeline */
-.timeline_container::after {
+.timeline-dcontainer::after {
   content: '';
   position: absolute;
   width: 25px;
@@ -1064,7 +1067,7 @@ footer {
   text-align: center;
 }
 
-.back_to_top_container {
+.back_to_top-dcontainer {
   text-align: center;
   padding: 2%;
 }
@@ -1120,7 +1123,7 @@ footer p a {
     font-size: 15px;
   }
 
-  .about_container .about-content-boxes {
+  .about-dcontainer .about-content-boxes {
     grid-template-areas: 'imageSect imageSect'
       'infoSect infoSect';
   }
@@ -1129,19 +1132,19 @@ footer p a {
     left: 29px;
   }
 
-  .timeline_container::after {
+  .timeline-dcontainer::after {
     left: 31px;
   }
 
   /* Full-width containers */
-  .timeline_container {
+  .timeline-dcontainer {
     width: 100%;
     padding-left: 70px;
     padding-right: 25px;
   }
 
   /* Make sure that all arrows are pointing leftwards */
-  .timeline_container::before {
+  .timeline-dcontainer::before {
     left: 60px;
     border: medium solid var(--nwhiteaccent);
     border-width: 10px 10px 10px .1px;
@@ -1189,7 +1192,7 @@ footer p a {
   #portfolio_cards {
     display: grid;
     place-items: center center;
-    padding: 0 5% 10% 5%;
+    padding: 0 5% 25% 5%;
   }
 
   #portfolio_cards .column {
